Finish lecture 2 practical 2.

--- a/lecture_02_practical_2.ipynb
+++ b/lecture_02_practical_2.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a432e972",
+   "id": "4b5ef5f8",
    "metadata": {},
    "source": [
     "It seems there is in fact a big speed advantage in this case!\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3092b018",
+   "id": "65c5104f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b32536b6",
+   "id": "6cade7d3",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ec6ea499",
+   "id": "9b15e4d9",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "829e427f",
+   "id": "95913d4c",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3def82f3",
+   "id": "f645e863",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b5567bc2",
+   "id": "f3724a22",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c9a475a",
+   "id": "96bf0847",
    "metadata": {},
    "source": [
     "Yet another advantage is in providing a natural setting for us to do linear algebra - something lists do not provide. We now demonstrate this connection and introduce the numpy library and its core objects more systematically.\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "61df863e",
+   "id": "95a93ba8",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "93dd27d8",
+   "id": "26fa3649",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "810420ed",
+   "id": "d4341821",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6210cc7e",
+   "id": "23ea5c50",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "71a24991",
+   "id": "4c7357a3",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0fe0b388",
+   "id": "7b624c9b",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "39c81cde",
+   "id": "ee8a5f69",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df29f8ab",
+   "id": "c9cdb8cd",
    "metadata": {},
    "source": [
     "I encourage you to review numpy in more detail [here](https://numpy.org/devdocs/user/quickstart.html), but for now we leave numpy behind and move on to pandas - in particular, the pandas series and dataframe.\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a8027c16",
+   "id": "71518605",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4f0f27f6",
+   "id": "44cc99eb",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7903b39e",
+   "id": "1eb7ede4",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c4526907",
+   "id": "0801beef",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23655e9b",
+   "id": "a42a5d52",
    "metadata": {},
    "source": [
     "Pandas series also have a name attribute that we can set. This becomes natural, when we consider dataframes. This is because the columns of a dataframe will be series, and the column name will be the series name."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7f35bf14",
+   "id": "e6ff7e5b",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b49d1d60",
+   "id": "d712f28a",
    "metadata": {},
    "source": [
     "Armed with the knowledge that a series is a like a numpy array with an index and a name, we can move on to pandas dataframes, which will be like a bunch of Series stuck side by side.\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "4f467bf7",
+   "id": "59b81b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1f85c68b",
+   "id": "97d9dbd2",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "36e3f616",
+   "id": "5151a869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9cdb1282",
+   "id": "729b72b6",
    "metadata": {},
    "outputs": [
     {
@@ -938,12 +938,385 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3b0da5",
+   "cell_type": "markdown",
+   "id": "4c10391b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "However you create the dataframe, you can treat it as a dictionary of series objects keyed on column name. Let's use this strategy to create some columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "032a986d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>integers</th>\n",
+       "      <th>even_integers</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   integers  even_integers     A      B\n",
+       "a       1.0            2.0   2.0   True\n",
+       "b       2.0            4.0   8.0  False\n",
+       "c       3.0            6.0  18.0  False\n",
+       "d       4.0            NaN   NaN  False\n",
+       "f       NaN           12.0   NaN  False"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df['A'] = my_df['integers'] * my_df['even_integers']\n",
+    "my_df['B'] = my_df['A'] <= my_df['even_integers']\n",
+    "my_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c1f6bcd",
+   "metadata": {},
+   "source": [
+    "As far as subsetting (or filtering down) dataframes go, we have this helpful table:\n",
+    "\n",
+    "| Operation | Syntax | Result |\n",
+    "| --------- | ------ | ------ |\n",
+    "|Select column | df[col] | Series |\n",
+    "|Select row by label | df.loc[label] | Series |\n",
+    "|Select row by integer location | df.iloc[loc] | Series |\n",
+    "|Slice rows | df[5:10] | DataFrame |\n",
+    "|Select rows by boolean vector | df[bool_vec] | DataFrame |\n",
+    "|Select by columns | df[[col1, ... , coln]] | DataFrame |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "fe506822",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a     True\n",
+      "b     True\n",
+      "c     True\n",
+      "d    False\n",
+      "f    False\n",
+      "Name: A, dtype: bool\n",
+      "   integers  even_integers     A      B\n",
+      "a       1.0            2.0   2.0   True\n",
+      "b       2.0            4.0   8.0  False\n",
+      "c       3.0            6.0  18.0  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Suppose we only want rows where column 'A' is not NaN\n",
+    "mask = ~my_df['A'].isna()\n",
+    "print(mask)\n",
+    "clean_df = my_df[mask]\n",
+    "print(clean_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "017b0442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>integers</th>\n",
+       "      <th>A</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   integers     A\n",
+       "a       1.0   2.0\n",
+       "b       2.0   8.0\n",
+       "c       3.0  18.0\n",
+       "d       4.0   NaN\n",
+       "f       NaN   NaN"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Suppose we only want columns 'integers' and 'A':\n",
+    "my_df[['integers', 'A']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "1826c56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>integers</th>\n",
+       "      <th>even_integers</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   integers  even_integers     A      B\n",
+       "a       1.0            2.0   2.0   True\n",
+       "b       2.0            4.0   8.0  False\n",
+       "c       3.0            6.0  18.0  False"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Suppose we only want the first 3 rows:\n",
+    "my_df[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "bc1feb6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "integers           3.0\n",
+       "even_integers      6.0\n",
+       "A                 18.0\n",
+       "B                False\n",
+       "Name: c, dtype: object"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Suppose we want the row at index 2:\n",
+    "# we could use the integer index\n",
+    "my_df.iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "bf398c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "integers           2.0\n",
+       "even_integers      4.0\n",
+       "A                  8.0\n",
+       "B                False\n",
+       "Name: b, dtype: object"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# or the label\n",
+    "my_df.loc['b']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "037cc6d1",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "1. Create a pandas dataframe with four columns.\n",
+    "    1. Column 'A' should contain the integers from 0 to 10.\n",
+    "    2. Column 'B' should contain the values of 'A' but doubled.\n",
+    "    3. Column 'C' should contain the values of 'A' but squared.\n",
+    "    4. Column 'D' should contain the values of 'A' but exponentiated (with base e).\n",
+    "2. Create a dataframe the `lecture_01_data.csv` file with the column names `['sepal_len', 'sepal_width', 'petal_len', 'petal_width', 'class']`.\n",
+    "    1. Create a new column 'sepal_ratio' which is 'sepal_len' / 'sepal_width'.\n",
+    "    2. Is 'sepal_ratio' ever NaN? If so, remove those rows.\n",
+    "    3. Is 'petal_len' ever 0? If so, remove those rows.\n",
+    "    4. Perform a log transform on 'petal_len' (create a new column with log base e of the petal_len column).\n",
+    "    5. Create a new boolean column that is True when petal_len is 1.4 or more and false otherwise.\n",
+    "3. For many modeling and analysis techniques, we need all feature values to be numeric. Starting with the dataframe created by exercise 2, do the following:\n",
+    "    1. Change the boolean column into 1's and 0's.\n",
+    "    2. One hot encode the 'class' column using pd.get_dummies() function.\n",
+    "    3. What is get_dummies doing?"
+   ]
   }
  ],
  "metadata": {
